@@ -8,8 +8,8 @@ button.removeWires=Remove Wires
 checkBox.plateCharges=Plate Charges
 checkBox.electricFieldLines=Electric Field Lines
 checkBox.meter.capacitance=Capacitance
-checkBox.meter.plateCharge=Plate Charge
-checkBox.meter.energy=Energy
+checkBox.meter.charge=Plate Charge
+checkBox.meter.energy=Stored Energy
 checkBox.meter.voltmeter=Voltmeter
 checkBox.meter.fieldDetector=Field Detector
 
@@ -19,14 +19,17 @@ label.dielectricCharges=Dielectric Charges:
 label.dielectricConstant=Dielectric Constant:
 label.dielectricMaterial=Material:
 label.plateCharge=Plate Charge (top)
-label.plateCharge.none=none
-label.plateCharge.lots=lots
+label.none=none
+label.lots=lots
 
 material.custom=custom
 material.teflon=teflon
 material.polystyrene=polystyrene
 material.paper=paper
 material.air=air
+
+meter.plateCharge=Plate Charge (top)
+meter.storedEnergy=Stored Energy
 
 pattern.value.0value.1units={0} {1}
 pattern.dielectricMaterial.0name.1constant={0} ({1})
@@ -48,5 +51,6 @@ title.meters=Meters
 units.volts=V
 units.millimeters=mm
 units.millimetersSquared=mm<sup>2</sup>
-units.coulombs=Coulombs
-units.picofarads=picofarads
+units.coulombs=C
+units.picofarads=pF
+units.joules=J
